v1.2.4/_sources/index.rst.txt
Welcome to Jina!
================

Jina is a deep learning-powered search framework for building cross-/multi-modal search systems (e.g. text, images, video, audio) on the cloud.

------------


Documentation types
**********************

Each of the four Jina products has the following documentation types.

- **Introduction**: New to a Jina product? Check out the Introduction pages. They contain an introduction to the main concepts and links to additional tutorial.
- **Installation**: How to install the corresponding Jina product.
- **Developer Guides**: Provides hands-on tutorials and in-depth information on features and implementations usecases.
- **API References**: Contains a detailed description of the product APIs. The reference describes how the methods work and which parameters can be used.


------------

Jina Products
**********************


- **Jina Core**: is the open-source neural search framework, it allows you to build search systems for any kind of data.
- **Jina Dashboard**: is a low-code monitoring and management environment for Jina. With the Dashboard you can build Jina Flows, manage them from a central location and get insights into the health of the Flows.
- **Jina Hub**: is a centralized registry, where you can share and discover custom and community driven Jina Pods tailored to specific use cases of neural search.
- **Jina Box**: is a light-weight, highly customizable JavaScript based front-end search interface.



Table of contents
**********************

.. toctree::
   :maxdepth: 1
   :caption: Jina Core

   chapters/core/introduction/index
   chapters/install/index
   chapters/core/guides/index
   chapters/core/api_references/index

.. toctree::
   :maxdepth: 1
   :caption: Jina Dashboard

   chapters/dashboard/introduction/index
   chapters/dashboard/guides/index

.. toctree::
   :maxdepth: 1
   :caption: Jina Hub

   chapters/hub/introduction/index
   chapters/hub/guides/index
   chapters/hub/api_references/index

.. toctree::
   :maxdepth: 1
   :caption: Jina Box

   chapters/box/introduction/index
   chapters/box/guides/index

.. toctree::
   :maxdepth: 1
   :caption: Glossary

   chapters/glossary

.. toctree::
   :maxdepth: 1
   :caption: Community

   chapters/CONTRIBUTING
   chapters/RELEASE
   chapters/CHANGELOG
   chapters/jep/index
   chapters/troubleshooting
   chapters/faq/dev
   chapters/faq/user
   chapters/docstring


.. toctree::
   :maxdepth: 1
   :caption: Indices and Tables

   chapters/all_exec
   chapters/all_driver

* :ref:`genindex`
* :ref:`modindex`
* :ref:`search`
